Version 0.44

- Dynamic nodes implemented.

Version 0.43

- Hardcoded nodes updated.

Version 0.42

- Hardcoded nodes updated.

Version 0.41

- Added "wrongip" report.
- Added option "-r" to reports.
- Fixed autovalue assign on load.

Version 0.40

- First release